# auto_segmentation

./: Dockerfile  LICENSE  README.md  auto_segmenter.py  docker-compose.yml  pyproject.toml  requirements.txt
pet_segmentation/: __init__.py
pet_segmentation/cli/: __init__.py  main.py
pet_segmentation/config/: __init__.py  settings.py
pet_segmentation/core/: __init__.py  dicom_loader.py  nninteractive_client.py  region_detector.py  segmenter.py  validator.py
pet_segmentation/utils/: __init__.py  logging.py
